src/components/search.css
.search {
  /* Pagefind tweaks */
  & .pagefind-ui__search-input {
    font-weight: normal;

    &::placeholder {
      opacity: 1;
      color: var(--color-dim);
    }

    &:focus {
      background: var(--color-background);
    }
  }

  & .pagefind-ui__search-clear {
    background: none;
  }

  & .pagefind-ui__drawer {
    background-color: var(--color-highlight);
    border-radius: var(--pagefind-ui-border-radius);
    padding: 0 1em;
    margin-top: 4px;
  }

  & .pagefind-ui__results-area {
    margin-top: 0;
  }

  & .pagefind-ui__result {
    border-bottom: none !important;
  }
}

